<?xml version="1.0"?>
<package format="2">
  <name>point_cl</name>
  <version>0.0.0</version>
  <description>The point_cl package</description>

  <maintainer email="zeus_007@todo.todo">zeus_007</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
